fixtures/src/invalid/content-ssml-invalid-ns/OEBPS/chapter1.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml" xmlns:ssml="http://www.w3.org/2001/10/synthesis-WRONG">
<head><title>Chapter 1</title></head>
<body>
  <h1>Chapter 1</h1>
  <p ssml:ph="test">Hello, world.</p>
</body>
</html>